# agent-guild-tavern

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: issue-raid-commander.md  issue-ranger.md  issue-slayer.md
.claude/skills/dispatching-guild-expedition/: SKILL.md
.claude/skills/issue-raid-commander/: SKILL.md
.claude/skills/issue-ranger/: ENV.md  RECON.md  SKILL.md
.claude/skills/issue-slayer/: ENV.md  SKILL.md
.claude/skills/quality-finisher/: ENV.md  SKILL.md
.claude/skills/shared/: PREREQUISITES.md  TEAM.md
.claude/skills/verify-sprint/: SKILL.md
.github/workflows/: snippet-sync.yml
agents/: issue-slayer.md
evals/: evals.json
plugins/guild-tavern/.claude-plugin/: plugin.json
plugins/guild-tavern/agents/: issue-raid-commander.md
plugins/guild-tavern/skills/dispatching-guild-expedition/: SKILL.md
plugins/guild-tavern/skills/issue-raid-commander/: SKILL.md
plugins/guild-tavern/skills/issue-ranger/: ENV.md  SKILL.md  TEMPLATE.md
plugins/guild-tavern/skills/issue-slayer/: SKILL.md  VERIFY.md
rubrics/: shared-rules.yaml
skills/dispatching-guild-expedition/: SKILL.md
skills/issue-raid-commander/: SKILL.md
skills/issue-ranger/: ENV.md  SKILL.md  TEMPLATE.md
skills/issue-slayer/: ENV.md  SELF-REVIEW.md  SKILL.md
skills/quality-finisher/: ENV.md  SKILL.md
skills/reading-guild-rules/: SKILL.md
skills/shared/: PREREQUISITES.md
skills/verify-sprint/: SKILL.md
tests/: test_rubric_lint.py  test_snippet_sync.py
(+2 files in other folders)
